Add manual trigger and push event to theme generator workflow

--- a/.github/workflows/theme-generator.yml
+++ b/.github/workflows/theme-generator.yml
@@ -3,6 +3,12 @@ name: Generate CSS Theme Hourly
 on:
   schedule:
     - cron: '0 * * * *' # Every hour
+  workflow_dispatch: # Manual trigger
+  push:
+    branches: [ main ]
+    paths:
+      - 'scripts/generate-theme.js'
+      - '.github/workflows/theme-generator.yml'
 
 jobs:
   generate-css:
