--- a/.github/workflows/theme-generator.yml
+++ b/.github/workflows/theme-generator.yml
@@ -14,8 +14,12 @@ on:
 jobs:
   generate-css:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -31,9 +35,9 @@ jobs:
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
       - name: Commit and push changes
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add css/themes/theme-hourly.css css/themes/theme-hourly-projects.css
-          git commit -m "Update theme CSS files [auto]" || echo "No changes to commit"
-          git push
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "Update theme CSS files [auto]"
+          file_pattern: "css/themes/*.css"
+          commit_user_name: "github-actions[bot]"
+          commit_user_email: "github-actions[bot]@users.noreply.github.com"
