--- a/.github/workflows/theme-generator.yml
+++ b/.github/workflows/theme-generator.yml
@@ -1,8 +1,8 @@
 name: Generate CSS Theme Hourly
 
 on:
-  schedule:
-    - cron: '0 * * * *' # Every hour
+  # schedule:
+  #  - cron: '0 * * * *' # Every hour
   workflow_dispatch: # Manual trigger
   push:
     branches: [ main ]
