--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" -- && echo Build completed successfully. && echo \"ish4nt.dev\" >> CNAME && cat CNAME && echo CNAME file created.",
+    "build": "run-p type-check \"build-only {@}\" -- && echo Build completed successfully. && echo ish4nt.dev >> CNAME && cat CNAME && echo CNAME file created.",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
